--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dynamic-labs/sdk-react-core": "^3.0.3",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@launchdarkly/vercel-server-sdk": "^1.3.23",
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.0.2",
     "@sendgrid/mail": "^8.1.3",
@@ -22,6 +23,7 @@
     "ethers": "^6.13.2",
     "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
+    "launchdarkly-react-client-sdk": "^3.6.1",
     "next": "^14.2.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
