--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-NEXT_PUBLIC_LD_CLIENT_ID=67d8249491286909858ce4e9
-LD_CLIENT_ID=67d8249491286909858ce4e9
-LD_API_KEY=api-4709e512-0ad4-40f3-9fe5-38264a536fab
+NEXT_PUBLIC_LD_CLIENT_ID=XXX
+LD_CLIENT_ID=XXX
+LD_API_KEY=api-XX
 LD_PROJECT_KEY=default
 NEXT_PUBLIC_LD_PROJECT_KEY=default
-NEXT_PUBLIC_LD_API_KEY=api-4709e512-0ad4-40f3-9fe5-38264a536fab
+NEXT_PUBLIC_LD_API_KEY=XXXXX
